Fixed overflow problems, tweaked designs + added validations (But not password checking)

--- a/styles.css
+++ b/styles.css
@@ -52,6 +52,15 @@ h2,
   margin-top: 20px;
 }
 
+h4 {
+  font-weight: 400;
+}
+
+a {
+  /* text-decoration: none; */
+  color: white;
+}
+
 .container {
   display: flex;
   flex-direction: column;
@@ -68,20 +77,49 @@ h2,
 
   flex: 1;
 }
+
 .container > .opacity-box {
   background-color: rgba(0, 0, 0, 0.664);
   position: absolute;
 
+  display: flex;
+
   color: white;
 
   text-align: center;
-  min-width: 100%;
+  align-items: center;
+  justify-content: center;
+
+  width: 58%;
   z-index: 1;
 
   align-self: center;
 
   top: 160px;
   font-size: 60px;
+
+  gap: 20px;
+  padding: 20px 0px;
+}
+
+.container > .credit {
+  position: absolute;
+
+  color: white;
+
+  text-align: center;
+
+  align-self: center;
+
+  min-width: 320px;
+  max-width: 320px;
+  top: 770px;
+  font-size: 15px;
+}
+
+.logo {
+  width: 80px;
+  height: 80px;
 }
 
 .img-cont {
@@ -143,6 +181,8 @@ form {
   padding: 20px 0px;
   background-color: white;
   border: 1.5px solid #cacbce;
+
+  box-shadow: 2px 5px 5px #cacbce, 2px -5px 5px #cacbce;
 }
 
 form > div > label {
@@ -183,20 +223,29 @@ button {
 
 .color {
   color: var(--green);
+  cursor: pointer;
 }
 
 button {
-  transition-duration: 0.4s;
+  transition-duration: 0.2s;
 }
 
 button:hover {
   background-color: #4a5c3b;
+  cursor: pointer;
 }
 
-[type]:invalid {
+button:active {
+  transform: scale(1.02);
+}
+
+input {
+}
+
+[type]:required:invalid:not(:placeholder-shown) {
   border-color: red;
 }
-/* 
-[type]:valid {
+
+input:valid {
   border-color: rgb(53, 181, 89);
-} */
+}
